<resources>
    <string name="app_name">Arctic Pass</string>
    <string name="generate">Generate</string>
    <string name="done">Done</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="unlock_key">Unlock Key</string>
    <string name="instructions">The encryption key is required when decrypting backup files.  The unlock key is used when opening the app.  You should write both down in a secure place.</string>
    <string name="unlock">Unlock</string>
    <string name="business">Business</string>
    <string name="personal">Personal</string>
    <string name="new_category_name">New Category Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this category?  This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notes">Notes:</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="description_already_exists">Description already exists</string>
    <string name="description_must_not_be_blank">Description must not be blank</string>
    <string name="username_copied_to_clipboard">Username copied to clipboard</string>
    <string name="password_copied_to_clipboard">Password copied to clipboard</string>
    <string name="theme">Theme</string>
    <string name="password_length">Password Length</string>
    <string name="categories">Categories</string>
    <string name="entries">Entries</string>
    <string name="credentials">Credentials</string>
    <string name="import_file">Import Backup File</string>
    <string name="export_file">Export Backup File</string>
    <string name="failed_to_write_file">Failed to write file</string>
    <string name="file_name">arcticPass</string>
    <string name="bad_file_type">Import Failed: Bad File</string>
    <string name="file_encrypted_with_different_password">Import Failed: File encrypted with different password</string>
    <string name="merge_or_replace">Would you like to <b>merge</b> the entries from the imported file with the currently stored entries <b>OR</b> would you like to <b>replace all</b> currently stored entries with the imported entries?</string>
    <string name="replace_all">Replace All</string>
    <string name="replace">Replace</string>
    <string name="merge">Merge</string>
    <string name="merge_conflict">There is a merge conflict with this entry.  Would you like to <b>replace</b> the current entry with the backup, or <b>keep</b> the current entry?</string>
    <string name="keep">Keep</string>
    <string name="sync_with_google">Sync with Google</string>
    <string name="restore_with_google">Restore with Google</string>
    <string name="folder_name">ArcticPass</string>
    <string name="backup">arctic_pass_backup_</string>
    <string name="select_file">Select the file you wish to import</string>
    <string name="import_">Import</string>
    <string name="failed_to_download">Failed to download file list.</string>
    <string name="no_files_found">No files found.</string>
    <string name="google_sign_out">Google Sign Out</string>
    <string name="are_you_sure_sign_out">Are you sure you want to disable automatic backup with Google Drive?</string>
    <string name="sign_out">Sign Out</string>
    <string name="encryption_key_instructions">After changing the encryption key, old backup files will no longer be able to decrypted (unless you change the encryption key back).  You should write the new key down in a secure place.</string>
    <string name="change_encryption_key">Change Encryption Key</string>
    <string name="change_unlock_key_instruction">Changing the unlock key only changes the key required to open the app on this device.  You should write this key down in a secure place.</string>
    <string name="change_unlock_key">Change Unlock Key</string>
    <string name="_30_seconds">30 Seconds</string>
    <string name="_1_minute">1 Minute</string>
    <string name="_2_minute">2 Minutes</string>
    <string name="_3_minute">3 Minutes</string>
    <string name="_5_minute">5 Minutes</string>
    <string name="_10_minute">10 Minutes</string>
    <string name="no_timeout">No Timeout</string>
    <string name="lock_when_screen_off">Lock when screen is turned off</string>
    <string name="auto_lock_time">Auto Lock Time</string>
    <string name="settings">Settings</string>
    <string name="enable_fingerprint">Enable Fingerprint Unlock</string>
    <string name="disable_fingerprint">Disable Fingerprint Unlock</string>
    <string name="failed">Failed</string>
    <string name="fingerprint_enabled">Fingerprint Enabled</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_fingerprint">Confirm fingerprint to continue</string>
    <string name="select_new_location">Select the category to move this entry to</string>
    <string name="move_failed">Error: An entry with this description already exists in that category</string>
    <string name="change">Change</string>
    <string name="category_already_exists">Error: Category already exists</string>
    <string name="scan_biometrics_to_log_in">Scan biometrics to log in.</string>
</resources>
