<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white_rounded">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/teal6"
        android:text="@string/select_file"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal6"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/files_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible"/>

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/teal6"
            android:text="@string/failed_to_download"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/teal6"
            android:text="@string/failed_to_download"
            android:visibility="gone"/>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal6"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/import_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/button_text_color"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/import_"/>

    </LinearLayout>

</LinearLayout>