<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/description"/>

                <TextView
                        android:id="@+id/description_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/description_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:lines="1"
                            android:inputType="textNoSuggestions"
                            android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/website"/>

                <TextView
                        android:id="@+id/website_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/website_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:lines="1"
                            android:inputType="textNoSuggestions"
                            android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/username"/>

                <TextView
                        android:id="@+id/username_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:lines="1"
                            android:inputType="textNoSuggestions"
                            android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/password"/>

                <TextView
                        android:id="@+id/password_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:lines="1"
                            android:inputType="textNoSuggestions"
                            android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="bottom"
                    android:layout_marginEnd="5dp"
                    android:text="@string/notes"/>

            <TextView
                    android:id="@+id/notes_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notes_field"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:textSize="16sp"
                        android:gravity="top"
                        android:inputType="textNoSuggestions|textMultiLine"
                        android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>